<resources>
    <string name="app_name">AMazeByPranavGonepalli</string>
    <string name="welcome">Welcome to the Maze!</string>
    <string name="maze_difficulty">Maze Difficulty</string>
    <string name="maze_generator">Maze Generator: </string>
    <string name="maze_rooms">Generate with Rooms? </string>
    <string name="revisit">Revisit</string>
    <string name="explore">Explore</string>
    <string name="maze_driver">Maze Driver: </string>
    <string name="robot_configuration">Robot Configuration: </string>
    <string name="show_map">Show Map</string>
    <string name="show_solution">Show Solution</string>
    <string name="show_walls">Show Walls</string>
    <string name="remaining_energy">Energy Remaining: 3500</string>
    <string name="animation_speed">Medium</string>
    <string name="congratulations">Congratulations, you won!</string>
    <string name="lose">Oh no, you lost!</string>
    <string name="path_length">Path Length: 0</string>
    <string name="shortest_path">Shortest Path: 0</string>
    <string name="energy_consumed">Energy Consumed: 0</string>
    <string name="play_again">PLAY AGAIN</string>
</resources>