<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.WinningActivity">

    <TextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/path_length_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_length"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/congratulations"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/shortest_path_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortest_path"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/path_length_text"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/energy_consumed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy_consumed"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/shortest_path_text"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/play_again"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/energy_consumed_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="switchToTitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>