<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayManuallyActivity">

    <TextView
        android:id="@+id/show_map_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/show_solution_text"/>
    <Switch
        android:id="@+id/show_map_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_map_text"
        app:layout_constraintStart_toStartOf="@id/show_map_text"
        app:layout_constraintEnd_toEndOf="@id/show_map_text"/>
    <TextView
        android:id="@+id/show_solution_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_solution"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_map_text"
        app:layout_constraintEnd_toStartOf="@id/show_walls_text"/>
    <Switch
        android:id="@+id/show_solution_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_solution_text"
        app:layout_constraintStart_toStartOf="@id/show_solution_text"
        app:layout_constraintEnd_toEndOf="@id/show_solution_text"/>
    <TextView
        android:id="@+id/show_walls_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_walls"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_solution_text"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
        android:id="@+id/show_walls_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_walls_text"
        app:layout_constraintStart_toStartOf="@id/show_walls_text"
        app:layout_constraintEnd_toEndOf="@id/show_walls_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>