<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.AMazeActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/pacmanlogo"
        android:layout_width="600dp"
        android:layout_height="230dp"
        app:srcCompat="@drawable/pacmanlogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/maze_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vt323"
        android:text="@string/maze_difficulty"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pacmanlogo" />

    <TextView
        android:id="@+id/maze_size_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maze_size_text" />
    <SeekBar
        android:id="@+id/maze_size"
        app:layout_constraintTop_toBottomOf="@id/maze_size_level"
        android:layout_width="300dp"
        android:progressBackgroundTint="@color/white"
        android:progressTint="#d03e19"
        android:thumb="@drawable/pacman"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:max="15"/>
    <TextView
        android:id="@+id/maze_generator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maze_generator"
        android:textSize="30dp"
        android:textStyle="bold"
        android:fontFamily="@font/vt323"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/maze_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/maze_generator"
        app:layout_constraintHorizontal_chainStyle="packed" />
    <Spinner
        android:id="@+id/maze_generator"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/maze_generator_text"
        app:layout_constraintBottom_toBottomOf="@id/maze_generator_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/maze_generator_text" />

    <TextView
        android:id="@+id/maze_rooms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/vt323"
        android:text="@string/maze_rooms"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/maze_rooms"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maze_generator" />
    <Spinner
        android:id="@+id/maze_rooms"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/maze_rooms_text"
        app:layout_constraintBottom_toBottomOf="@id/maze_rooms_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/maze_rooms_text" />

    <Button
        android:id="@+id/revisit_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/revisit"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/press_start_2p"
        android:background="@android:color/transparent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/maze_rooms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/explore_button"
        android:onClick="switchToGeneratingRevisit"
        />
    <Button
        android:id="@+id/explore_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/explore"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#fae900"
        android:fontFamily="@font/press_start_2p"
        android:background="@android:color/transparent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/maze_rooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/revisit_button"
        android:onClick="switchToGeneratingExplore"
        />
</androidx.constraintlayout.widget.ConstraintLayout>