<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayAnimationActivity"
    android:background="@color/black">

    <edu.wm.cs.cs301.pranavgonepalli.gui.MazePanel
        android:id="@+id/maze_view"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/show_map_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:fontFamily="@font/vt323"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/show_solution_text"/>
    <Switch
        android:id="@+id/show_map_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_map_text"
        app:layout_constraintStart_toStartOf="@id/show_map_text"
        app:layout_constraintEnd_toEndOf="@id/show_map_text"/>
    <TextView
        android:id="@+id/show_solution_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_solution"
        android:fontFamily="@font/vt323"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_map_text"
        app:layout_constraintEnd_toStartOf="@id/show_walls_text"/>
    <Switch
        android:id="@+id/show_solution_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_solution_text"
        app:layout_constraintStart_toStartOf="@id/show_solution_text"
        app:layout_constraintEnd_toEndOf="@id/show_solution_text"/>
    <TextView
        android:id="@+id/show_walls_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_walls"
        android:fontFamily="@font/vt323"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_solution_text"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
        android:id="@+id/show_walls_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_walls_text"
        app:layout_constraintStart_toStartOf="@id/show_walls_text"
        app:layout_constraintEnd_toEndOf="@id/show_walls_text"/>
    <SeekBar
        android:id="@+id/zoom_seekbar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:progressBackgroundTint="@color/white"
        android:progressTint="#d03e19"
        android:thumb="@drawable/pacman"
        app:layout_constraintTop_toBottomOf="@id/maze_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="10"/>
    <TextView
        android:id="@+id/energy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_energy"
        android:fontFamily="@font/vt323"
        android:textColor="#d03e19"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_solution_switch" />
    <SeekBar
        android:id="@+id/progress_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:progressBackgroundTint="@color/white"
        android:progressTint="#d03e19"
        android:thumb="@drawable/pacmanright"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/energy_text"
        android:max="3500"/>
    <Button
        android:id="@+id/playpause_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:textSize="15dp"
        android:textColor="#d03e19"
        android:fontFamily="@font/press_start_2p"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="START"
        android:onClick="playOrPause"/>
    <TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animation_speed"
        android:fontFamily="@font/vt323"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/speed_seekbar"
        app:layout_constraintStart_toStartOf="@id/speed_seekbar"
        app:layout_constraintEnd_toEndOf="@id/speed_seekbar"/>
    <SeekBar
        android:id="@+id/speed_seekbar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="60dp"
        android:progressBackgroundTint="@color/white"
        android:progressTint="#d03e19"
        android:thumb="@drawable/pacman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:max="2"/>
    <Button
        android:id="@+id/forward_sensor_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="#34eb43"
        android:text="F"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/left_sensor_button"/>
    <Button
        android:id="@+id/left_sensor_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="#34eb43"
        android:text="L"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toEndOf="@id/forward_sensor_button"
        app:layout_constraintEnd_toStartOf="@id/right_sensor_button"/>
    <Button
        android:id="@+id/right_sensor_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="#34eb43"
        android:text="R"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toEndOf="@id/left_sensor_button"
        app:layout_constraintEnd_toStartOf="@id/backward_sensor_button"/>
    <Button
        android:id="@+id/backward_sensor_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="#34eb43"
        android:text="B"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toEndOf="@id/right_sensor_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>